--- a/style.css
+++ b/style.css
@@ -1,20 +1,385 @@
-body
-{
-  margin: 0cm;
+@import url('https://fonts.googleapis.com/css2?family=Chivo:ital@1&family=Overpass:wght@100&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Chivo', sans-serif;
+    font-family: 'Overpass', sans-serif;
 }
 
-.cover
+header
 {
-  height:400px;
-  background-image:url(https://cdn.glitch.com/fe647926-a06f-4ed6-b2b2-a405f506537c%2Frsz_andre-hunter-ugjpgy2bqug-unsplash.jpg?v=1629572174245);
-  color:white;
-  background-size: cover;
-  background-position:center;
-  background-color:rgba(0,0,0,0.5);
-  background-blend-mode: darken;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background: rgb(255, 255, 255) ;
+    box-shadow: 0 10px 25px -22px rgb(8, 8, 8);
+    z-index: 2;
+}
+.header-content
+{
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    
 }
 
-.card{
-  border: 0 !important;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+.logo
+{
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo h1
+{
+    color: rgb(35, 35, 165);
+}
+.logo h1 b
+{
+    color: rgb(131, 29, 29);
+}
+.menu 
+{
+    height: 80px;
+
+}
+.menu nav
+{
+    height: 100%;
+}
+.menu nav ul
+{
+    height: 100%;
+    display: flex;
+    list-style: none;
+}
+.menu nav ul li
+{
+    height: 100%;
+    margin: 0px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+.menu-selected:before
+{
+    content: '';
+    width: 100%;
+    height: 4px;
+    background: rgb(131, 29, 29);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.menu nav ul li a
+{
+    color: #777777;
+    font-size: 18px;
+    transition: color 300ms;
+}
+
+.menu nav ul li a:hover
+{
+    color:rgb(131, 29, 29);
+}
+
+.menu.text-menu-selected
+{
+    color:rgb(131, 29, 29);
+}
+.menu nav ul li a i{
+    display: none;
+}
+
+#icon-menu{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 20px;
+    top: 16px;
+    padding: 10px;
+    font-size: 20px;
+    background: #fafafafa;
+    border-radius: 100%;
+    color: #787878;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+#icon-menu:hover{
+    opacity: 0.8;
+}
+
+/*Portada*/
+
+.container-cover{
+    width: 100%;
+    height: 500px;
+    position: relative;
+    margin-top: 80px;
+    background-image: url(../Imágenes/andre-hunter-ugjPgy2BQug-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+} 
+.container-cover::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(131, 29, 29, 0.486);
+    position:absolute;
+    top: 0;
+    left: 0;
+}
+
+.container-info-cover{
+    max-width: 800px;
+    height: 500px;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+}
+
+.container-info-cover h1{
+    font-size: 60px;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    margin-bottom: 20px;
+
+}
+.container-info-cover p{
+    color: rgb(243, 242, 242);
+    font-size: 20px;
+    font-weight: 300;
+}
+
+/*Contenedor contenido del articulo*/
+
+.container-content{
+    width: 1200px;
+    margin: auto;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+article{
+    width: 100%;
+    padding: 20px;
+    padding-bottom: 40px;
+    box-shadow: -10px 0 20px -30px rgb(12, 12, 12);
+    border-radius: 6px;
+    position: relative;
+    overflow: hidden;
+}
+
+article:before{
+    content: '';
+    width: 100%;
+    height: 6px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgb(131, 29, 29);
+}
+
+article h1{
+    margin-top: 20px;
+    font-weight: 500;
+    font-size: 40px;
+}
+article p{
+    margin-top: 20px;
+    font-size: 18px;
+    color: #3c3c3c;
+}
+article img{
+    width: 50%;
+    margin-top: 20px;
+}
+
+/*Aside de descripción de los diseñadores*/
+.container-aside aside{
+    width: 320px;
+    border-radius: 6px;
+    box-shadow: 0 0 20px -20px rgb(0, 0, 0);
+    overflow: hidden;
+    margin-left: 60px;
+    margin-bottom: 40px;
+    padding-bottom: 20px;
+}
+.container-aside aside img{
+    width: 100%;
+}
+
+.container-aside aside h2,
+.container-aside p{
+    margin-top: 20px;
+    padding: 0px 20px;
+}
+
+.container-aside aside button{
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 10px 50px;
+    font-size: 16px;
+    background:rgb(131, 29, 29) ;
+    border: none;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    border-radius: 6px;
+}
+
+.container-aside aside button{
+    opacity: 0.9;
+}
+/*Footer - pie de pagina*/
+
+.container-footer{
+    width: 100%;
+    padding: 40px;
+    background: white;
+    margin-top: 40px;
+}
+.container-footer footer{
+    max-width: 1200px;
+    margin: auto;
+}
+.container-footer footer .logo-footer img{
+    width: 100px;
+}
+.container-footer footer .redes-footer{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.container-footer footer .redes-footer .icon-redes-footer{
+    font-size: 20px;
+    margin: 20px;
+    background: #efefef;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    color: #a2a2a2;
+}
+footer .redes-footer .fa-facebook:hover{
+    background: #41579A;
+    color: white;
+}
+footer .redes-footer .fa-instagram:hover{
+    background: linear-gradient(to top right , #FCDE30, #E9712A,#D2313B,#AE4198,#5443A8);
+    color: white;
+}
+footer .redes-footer .fa-twitter:hover{
+    background: #499fe6;
+    color: white;
+}
+.container-footer footer hr{
+    margin-top: 20px;
+    border: none;
+    height: 5px;
+    background: #c0bfbf7a;
+}
+.container-footer h4{
+    text-align: center;
+    margin-top: 40px;
+    color: #8e8e8e;
+    font-weight: 500px;
+}
+
+/* Responsive Desing - adaptable a celulares*/
+
+@media screen and (max-width:1220px) {
+    .header-content,
+    .container-content,
+    .container-footer footer{
+        max-width: 1000px;
+        padding: 0 20px;
+    }
+}
+
+@media screen and (max-width:1220px){
+    .container-content{
+        width: 100%;
+        flex-direction: column;
+    }
+
+    article{
+        box-shadow: 0 0 0 0;
+    }
+
+    .container-aside{
+        display: flex;
+        justify-content: center;
+    }
+
+    .container-aside aside{
+        max-width: 300px;
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width:800px){
+
+    .move-container-all{
+        transform: translateX(300px);
+    }
+
+    .menu{
+        width: 0px;
+        height: 100vh;
+        position: fixed;
+        top: 80px;
+        left: 0;
+        background: white;
+        overflow: hidden;
+        box-shadow: 10px 0 20px -25px black;
+    }
+
+    .menu nav ul{
+        flex-direction: column;
+    }
+
+    .menu nav ul li{
+        max-width: 200px;
+        height: 50px;
+        justify-content: flex-start;
+    }
+    .menu-selected:before{
+        width: 0;
+    }
+
+    .menu nav ul li a{
+        margin-top: 40px;
+        color: #858585;
+    }
+    .menu nav ul li a i{
+        width: 20px;
+        display: inline-block;
+        margin-right: 10px;
+        color: rgb(131, 29, 29);
+    }
+    #icon-menu{
+        display: flex;
+    }
+    .container-aside{
+        flex-wrap: wrap;
+    }
 }
